Atualização python/analisador sintatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BIBLIOTECA
    CONDICIONAL
    FUNCAO_RECURSIVA
    OPERADOR
    PALAVRA_RES
    RETORNO
    SIMBOLO_ESP

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID SEMICOLON
Rule 7     var_declaration -> type_specifier ID ASSIGN expression SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    type_specifier -> DOUBLE
Rule 11    type_specifier -> CHAR
Rule 12    type_specifier -> BOOLEAN
Rule 13    fun_declaration -> type_specifier FUNCAO_PRINCIPAL LPAREN RPAREN compound_stmt
Rule 14    params -> param_list
Rule 15    params -> VOID
Rule 16    param_list -> param_list COMMA param
Rule 17    param_list -> param
Rule 18    param -> type_specifier ID
Rule 19    compound_stmt -> LBRACE local_declarations statement_list RBRACE
Rule 20    local_declarations -> local_declarations var_declaration
Rule 21    local_declarations -> empty
Rule 22    statement_list -> statement_list statement
Rule 23    statement_list -> empty
Rule 24    statement -> expression_stmt
Rule 25    statement -> compound_stmt
Rule 26    statement -> selection_stmt
Rule 27    statement -> iteration_stmt
Rule 28    statement -> return_stmt
Rule 29    statement -> print_stmt
Rule 30    expression_stmt -> expression SEMICOLON
Rule 31    expression_stmt -> SEMICOLON
Rule 32    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 33    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 34    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 35    iteration_stmt -> FOR LPAREN expression_stmt expression_stmt expression RPAREN statement
Rule 36    return_stmt -> RETURN SEMICOLON
Rule 37    return_stmt -> RETURN expression SEMICOLON
Rule 38    print_stmt -> PRINTF LPAREN TEXTO RPAREN SEMICOLON
Rule 39    print_stmt -> PRINTF LPAREN expression RPAREN SEMICOLON
Rule 40    expression -> assignment
Rule 41    expression -> simple_expression
Rule 42    assignment -> var ASSIGN expression
Rule 43    assignment -> var ADD_ASSIGN expression
Rule 44    assignment -> var SUB_ASSIGN expression
Rule 45    assignment -> var MUL_ASSIGN expression
Rule 46    assignment -> var DIV_ASSIGN expression
Rule 47    assignment -> var MOD_ASSIGN expression
Rule 48    var -> ID
Rule 49    var -> ID LBRACKET expression RBRACKET
Rule 50    simple_expression -> additive_expression relop additive_expression
Rule 51    simple_expression -> additive_expression
Rule 52    relop -> GE
Rule 53    relop -> LE
Rule 54    relop -> GT
Rule 55    relop -> LT
Rule 56    relop -> EQ
Rule 57    relop -> NE
Rule 58    additive_expression -> additive_expression addop term
Rule 59    additive_expression -> term
Rule 60    addop -> PLUS
Rule 61    addop -> MINUS
Rule 62    term -> term mulop factor
Rule 63    term -> factor
Rule 64    mulop -> TIMES
Rule 65    mulop -> DIVIDE
Rule 66    mulop -> MOD
Rule 67    factor -> LPAREN expression RPAREN
Rule 68    factor -> var
Rule 69    factor -> call
Rule 70    factor -> NUM_INT
Rule 71    factor -> NUM_DEC
Rule 72    factor -> TEXTO
Rule 73    call -> ID LPAREN args RPAREN
Rule 74    args -> arg_list
Rule 75    args -> empty
Rule 76    arg_list -> arg_list COMMA expression
Rule 77    arg_list -> expression
Rule 78    empty -> <empty>

Terminals, with rules where they appear

ADD_ASSIGN           : 43
ASSIGN               : 7 42
BIBLIOTECA           : 
BOOLEAN              : 12
CHAR                 : 11
COMMA                : 16 76
CONDICIONAL          : 
DIVIDE               : 65
DIV_ASSIGN           : 46
DOUBLE               : 10
ELSE                 : 32
EQ                   : 56
FLOAT                : 9
FOR                  : 35
FUNCAO_PRINCIPAL     : 13
FUNCAO_RECURSIVA     : 
GE                   : 52
GT                   : 54
ID                   : 6 7 18 48 49 73
IF                   : 32 33
INT                  : 8
LBRACE               : 19
LBRACKET             : 49
LE                   : 53
LPAREN               : 13 32 33 34 35 38 39 67 73
LT                   : 55
MINUS                : 61
MOD                  : 66
MOD_ASSIGN           : 47
MUL_ASSIGN           : 45
NE                   : 57
NUM_DEC              : 71
NUM_INT              : 70
OPERADOR             : 
PALAVRA_RES          : 
PLUS                 : 60
PRINTF               : 38 39
RBRACE               : 19
RBRACKET             : 49
RETORNO              : 
RETURN               : 36 37
RPAREN               : 13 32 33 34 35 38 39 67 73
SEMICOLON            : 6 7 30 31 36 37 38 39
SIMBOLO_ESP          : 
SUB_ASSIGN           : 44
TEXTO                : 38 72
TIMES                : 64
VOID                 : 15
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

additive_expression  : 50 50 51 58
addop                : 58
arg_list             : 74 76
args                 : 73
assignment           : 40
call                 : 69
compound_stmt        : 13 25
declaration          : 2 3
declaration_list     : 1 2
empty                : 21 23 75
expression           : 7 30 32 33 34 35 37 39 42 43 44 45 46 47 49 67 76 77
expression_stmt      : 24 35 35
factor               : 62 63
fun_declaration      : 5
iteration_stmt       : 27
local_declarations   : 19 20
mulop                : 62
param                : 16 17
param_list           : 14 16
params               : 
print_stmt           : 29
program              : 0
relop                : 50
return_stmt          : 28
selection_stmt       : 26
simple_expression    : 41
statement            : 22 32 32 33 34 35
statement_list       : 19 22
term                 : 58 59 62
type_specifier       : 6 7 13 18
var                  : 42 43 44 45 46 47 68
var_declaration      : 4 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> . type_specifier FUNCAO_PRINCIPAL LPAREN RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . DOUBLE
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> . type_specifier FUNCAO_PRINCIPAL LPAREN RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . DOUBLE
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    declaration                    shift and go to state 12
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    DOUBLE          reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    BOOLEAN         reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    DOUBLE          reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    BOOLEAN         reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    DOUBLE          reduce using rule 5 (declaration -> fun_declaration .)
    CHAR            reduce using rule 5 (declaration -> fun_declaration .)
    BOOLEAN         reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (7) var_declaration -> type_specifier . ID ASSIGN expression SEMICOLON
    (13) fun_declaration -> type_specifier . FUNCAO_PRINCIPAL LPAREN RPAREN compound_stmt

    ID              shift and go to state 13
    FUNCAO_PRINCIPAL shift and go to state 14


state 7

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)
    FUNCAO_PRINCIPAL reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> FLOAT .

    ID              reduce using rule 9 (type_specifier -> FLOAT .)
    FUNCAO_PRINCIPAL reduce using rule 9 (type_specifier -> FLOAT .)


state 9

    (10) type_specifier -> DOUBLE .

    ID              reduce using rule 10 (type_specifier -> DOUBLE .)
    FUNCAO_PRINCIPAL reduce using rule 10 (type_specifier -> DOUBLE .)


state 10

    (11) type_specifier -> CHAR .

    ID              reduce using rule 11 (type_specifier -> CHAR .)
    FUNCAO_PRINCIPAL reduce using rule 11 (type_specifier -> CHAR .)


state 11

    (12) type_specifier -> BOOLEAN .

    ID              reduce using rule 12 (type_specifier -> BOOLEAN .)
    FUNCAO_PRINCIPAL reduce using rule 12 (type_specifier -> BOOLEAN .)


state 12

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    DOUBLE          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOLEAN         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 13

    (6) var_declaration -> type_specifier ID . SEMICOLON
    (7) var_declaration -> type_specifier ID . ASSIGN expression SEMICOLON

    SEMICOLON       shift and go to state 15
    ASSIGN          shift and go to state 16


state 14

    (13) fun_declaration -> type_specifier FUNCAO_PRINCIPAL . LPAREN RPAREN compound_stmt

    LPAREN          shift and go to state 17


state 15

    (6) var_declaration -> type_specifier ID SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    DOUBLE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    CHAR            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    BOOLEAN         reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    PRINTF          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    NUM_INT         reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    NUM_DEC         reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    TEXTO           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)


state 16

    (7) var_declaration -> type_specifier ID ASSIGN . expression SEMICOLON
    (40) expression -> . assignment
    (41) expression -> . simple_expression
    (42) assignment -> . var ASSIGN expression
    (43) assignment -> . var ADD_ASSIGN expression
    (44) assignment -> . var SUB_ASSIGN expression
    (45) assignment -> . var MUL_ASSIGN expression
    (46) assignment -> . var DIV_ASSIGN expression
    (47) assignment -> . var MOD_ASSIGN expression
    (50) simple_expression -> . additive_expression relop additive_expression
    (51) simple_expression -> . additive_expression
    (48) var -> . ID
    (49) var -> . ID LBRACKET expression RBRACKET
    (58) additive_expression -> . additive_expression addop term
    (59) additive_expression -> . term
    (62) term -> . term mulop factor
    (63) term -> . factor
    (67) factor -> . LPAREN expression RPAREN
    (68) factor -> . var
    (69) factor -> . call
    (70) factor -> . NUM_INT
    (71) factor -> . NUM_DEC
    (72) factor -> . TEXTO
    (73) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 18
    LPAREN          shift and go to state 26
    NUM_INT         shift and go to state 28
    NUM_DEC         shift and go to state 29
    TEXTO           shift and go to state 30

    expression                     shift and go to state 19
    assignment                     shift and go to state 20
    simple_expression              shift and go to state 21
    var                            shift and go to state 22
    additive_expression            shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 25
    call                           shift and go to state 27

state 17

    (13) fun_declaration -> type_specifier FUNCAO_PRINCIPAL LPAREN . RPAREN compound_stmt

    RPAREN          shift and go to state 31


state 18

    (48) var -> ID .
    (49) var -> ID . LBRACKET expression RBRACKET
    (73) call -> ID . LPAREN args RPAREN

    ASSIGN          reduce using rule 48 (var -> ID .)
    ADD_ASSIGN      reduce using rule 48 (var -> ID .)
    SUB_ASSIGN      reduce using rule 48 (var -> ID .)
    MUL_ASSIGN      reduce using rule 48 (var -> ID .)
    DIV_ASSIGN      reduce using rule 48 (var -> ID .)
    MOD_ASSIGN      reduce using rule 48 (var -> ID .)
    TIMES           reduce using rule 48 (var -> ID .)
    DIVIDE          reduce using rule 48 (var -> ID .)
    MOD             reduce using rule 48 (var -> ID .)
    GE              reduce using rule 48 (var -> ID .)
    LE              reduce using rule 48 (var -> ID .)
    GT              reduce using rule 48 (var -> ID .)
    LT              reduce using rule 48 (var -> ID .)
    EQ              reduce using rule 48 (var -> ID .)
    NE              reduce using rule 48 (var -> ID .)
    PLUS            reduce using rule 48 (var -> ID .)
    MINUS           reduce using rule 48 (var -> ID .)
    SEMICOLON       reduce using rule 48 (var -> ID .)
    RPAREN          reduce using rule 48 (var -> ID .)
    RBRACKET        reduce using rule 48 (var -> ID .)
    COMMA           reduce using rule 48 (var -> ID .)
    LBRACKET        shift and go to state 32
    LPAREN          shift and go to state 33


state 19

    (7) var_declaration -> type_specifier ID ASSIGN expression . SEMICOLON

    SEMICOLON       shift and go to state 34


state 20

    (40) expression -> assignment .

    SEMICOLON       reduce using rule 40 (expression -> assignment .)
    RPAREN          reduce using rule 40 (expression -> assignment .)
    RBRACKET        reduce using rule 40 (expression -> assignment .)
    COMMA           reduce using rule 40 (expression -> assignment .)


state 21

    (41) expression -> simple_expression .

    SEMICOLON       reduce using rule 41 (expression -> simple_expression .)
    RPAREN          reduce using rule 41 (expression -> simple_expression .)
    RBRACKET        reduce using rule 41 (expression -> simple_expression .)
    COMMA           reduce using rule 41 (expression -> simple_expression .)


state 22

    (42) assignment -> var . ASSIGN expression
    (43) assignment -> var . ADD_ASSIGN expression
    (44) assignment -> var . SUB_ASSIGN expression
    (45) assignment -> var . MUL_ASSIGN expression
    (46) assignment -> var . DIV_ASSIGN expression
    (47) assignment -> var . MOD_ASSIGN expression
    (68) factor -> var .

    ASSIGN          shift and go to state 35
    ADD_ASSIGN      shift and go to state 36
    SUB_ASSIGN      shift and go to state 37
    MUL_ASSIGN      shift and go to state 38
    DIV_ASSIGN      shift and go to state 39
    MOD_ASSIGN      shift and go to state 40
    TIMES           reduce using rule 68 (factor -> var .)
    DIVIDE          reduce using rule 68 (factor -> var .)
    MOD             reduce using rule 68 (factor -> var .)
    GE              reduce using rule 68 (factor -> var .)
    LE              reduce using rule 68 (factor -> var .)
    GT              reduce using rule 68 (factor -> var .)
    LT              reduce using rule 68 (factor -> var .)
    EQ              reduce using rule 68 (factor -> var .)
    NE              reduce using rule 68 (factor -> var .)
    PLUS            reduce using rule 68 (factor -> var .)
    MINUS           reduce using rule 68 (factor -> var .)
    SEMICOLON       reduce using rule 68 (factor -> var .)
    RPAREN          reduce using rule 68 (factor -> var .)
    RBRACKET        reduce using rule 68 (factor -> var .)
    COMMA           reduce using rule 68 (factor -> var .)


state 23

    (50) simple_expression -> additive_expression . relop additive_expression
    (51) simple_expression -> additive_expression .
    (58) additive_expression -> additive_expression . addop term
    (52) relop -> . GE
    (53) relop -> . LE
    (54) relop -> . GT
    (55) relop -> . LT
    (56) relop -> . EQ
    (57) relop -> . NE
    (60) addop -> . PLUS
    (61) addop -> . MINUS

    SEMICOLON       reduce using rule 51 (simple_expression -> additive_expression .)
    RPAREN          reduce using rule 51 (simple_expression -> additive_expression .)
    RBRACKET        reduce using rule 51 (simple_expression -> additive_expression .)
    COMMA           reduce using rule 51 (simple_expression -> additive_expression .)
    GE              shift and go to state 43
    LE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    PLUS            shift and go to state 49
    MINUS           shift and go to state 50

    relop                          shift and go to state 41
    addop                          shift and go to state 42

state 24

    (59) additive_expression -> term .
    (62) term -> term . mulop factor
    (64) mulop -> . TIMES
    (65) mulop -> . DIVIDE
    (66) mulop -> . MOD

    GE              reduce using rule 59 (additive_expression -> term .)
    LE              reduce using rule 59 (additive_expression -> term .)
    GT              reduce using rule 59 (additive_expression -> term .)
    LT              reduce using rule 59 (additive_expression -> term .)
    EQ              reduce using rule 59 (additive_expression -> term .)
    NE              reduce using rule 59 (additive_expression -> term .)
    PLUS            reduce using rule 59 (additive_expression -> term .)
    MINUS           reduce using rule 59 (additive_expression -> term .)
    SEMICOLON       reduce using rule 59 (additive_expression -> term .)
    RPAREN          reduce using rule 59 (additive_expression -> term .)
    RBRACKET        reduce using rule 59 (additive_expression -> term .)
    COMMA           reduce using rule 59 (additive_expression -> term .)
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    MOD             shift and go to state 54

    mulop                          shift and go to state 51

state 25

    (63) term -> factor .

    TIMES           reduce using rule 63 (term -> factor .)
    DIVIDE          reduce using rule 63 (term -> factor .)
    MOD             reduce using rule 63 (term -> factor .)
    GE              reduce using rule 63 (term -> factor .)
    LE              reduce using rule 63 (term -> factor .)
    GT              reduce using rule 63 (term -> factor .)
    LT              reduce using rule 63 (term -> factor .)
    EQ              reduce using rule 63 (term -> factor .)
    NE              reduce using rule 63 (term -> factor .)
    PLUS            reduce using rule 63 (term -> factor .)
    MINUS           reduce using rule 63 (term -> factor .)
    SEMICOLON       reduce using rule 63 (term -> factor .)
    RPAREN          reduce using rule 63 (term -> factor .)
    RBRACKET        reduce using rule 63 (term -> factor .)
    COMMA           reduce using rule 63 (term -> factor .)


state 26

    (67) factor -> LPAREN . expression RPAREN
    (40) expression -> . assignment
    (41) expression -> . simple_expression
    (42) assignment -> . var ASSIGN expression
    (43) assignment -> . var ADD_ASSIGN expression
    (44) assignment -> . var SUB_ASSIGN expression
    (45) assignment -> . var MUL_ASSIGN expression
    (46) assignment -> . var DIV_ASSIGN expression
    (47) assignment -> . var MOD_ASSIGN expression
    (50) simple_expression -> . additive_expression relop additive_expression
    (51) simple_expression -> . additive_expression
    (48) var -> . ID
    (49) var -> . ID LBRACKET expression RBRACKET
    (58) additive_expression -> . additive_expression addop term
    (59) additive_expression -> . term
    (62) term -> . term mulop factor
    (63) term -> . factor
    (67) factor -> . LPAREN expression RPAREN
    (68) factor -> . var
    (69) factor -> . call
    (70) factor -> . NUM_INT
    (71) factor -> . NUM_DEC
    (72) factor -> . TEXTO
    (73) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 18
    LPAREN          shift and go to state 26
    NUM_INT         shift and go to state 28
    NUM_DEC         shift and go to state 29
    TEXTO           shift and go to state 30

    expression                     shift and go to state 55
    assignment                     shift and go to state 20
    simple_expression              shift and go to state 21
    var                            shift and go to state 22
    additive_expression            shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 25
    call                           shift and go to state 27

state 27

    (69) factor -> call .

    TIMES           reduce using rule 69 (factor -> call .)
    DIVIDE          reduce using rule 69 (factor -> call .)
    MOD             reduce using rule 69 (factor -> call .)
    GE              reduce using rule 69 (factor -> call .)
    LE              reduce using rule 69 (factor -> call .)
    GT              reduce using rule 69 (factor -> call .)
    LT              reduce using rule 69 (factor -> call .)
    EQ              reduce using rule 69 (factor -> call .)
    NE              reduce using rule 69 (factor -> call .)
    PLUS            reduce using rule 69 (factor -> call .)
    MINUS           reduce using rule 69 (factor -> call .)
    SEMICOLON       reduce using rule 69 (factor -> call .)
    RPAREN          reduce using rule 69 (factor -> call .)
    RBRACKET        reduce using rule 69 (factor -> call .)
    COMMA           reduce using rule 69 (factor -> call .)


state 28

    (70) factor -> NUM_INT .

    TIMES           reduce using rule 70 (factor -> NUM_INT .)
    DIVIDE          reduce using rule 70 (factor -> NUM_INT .)
    MOD             reduce using rule 70 (factor -> NUM_INT .)
    GE              reduce using rule 70 (factor -> NUM_INT .)
    LE              reduce using rule 70 (factor -> NUM_INT .)
    GT              reduce using rule 70 (factor -> NUM_INT .)
    LT              reduce using rule 70 (factor -> NUM_INT .)
    EQ              reduce using rule 70 (factor -> NUM_INT .)
    NE              reduce using rule 70 (factor -> NUM_INT .)
    PLUS            reduce using rule 70 (factor -> NUM_INT .)
    MINUS           reduce using rule 70 (factor -> NUM_INT .)
    SEMICOLON       reduce using rule 70 (factor -> NUM_INT .)
    RPAREN          reduce using rule 70 (factor -> NUM_INT .)
    RBRACKET        reduce using rule 70 (factor -> NUM_INT .)
    COMMA           reduce using rule 70 (factor -> NUM_INT .)


state 29

    (71) factor -> NUM_DEC .

    TIMES           reduce using rule 71 (factor -> NUM_DEC .)
    DIVIDE          reduce using rule 71 (factor -> NUM_DEC .)
    MOD             reduce using rule 71 (factor -> NUM_DEC .)
    GE              reduce using rule 71 (factor -> NUM_DEC .)
    LE              reduce using rule 71 (factor -> NUM_DEC .)
    GT              reduce using rule 71 (factor -> NUM_DEC .)
    LT              reduce using rule 71 (factor -> NUM_DEC .)
    EQ              reduce using rule 71 (factor -> NUM_DEC .)
    NE              reduce using rule 71 (factor -> NUM_DEC .)
    PLUS            reduce using rule 71 (factor -> NUM_DEC .)
    MINUS           reduce using rule 71 (factor -> NUM_DEC .)
    SEMICOLON       reduce using rule 71 (factor -> NUM_DEC .)
    RPAREN          reduce using rule 71 (factor -> NUM_DEC .)
    RBRACKET        reduce using rule 71 (factor -> NUM_DEC .)
    COMMA           reduce using rule 71 (factor -> NUM_DEC .)


state 30

    (72) factor -> TEXTO .

    TIMES           reduce using rule 72 (factor -> TEXTO .)
    DIVIDE          reduce using rule 72 (factor -> TEXTO .)
    MOD             reduce using rule 72 (factor -> TEXTO .)
    GE              reduce using rule 72 (factor -> TEXTO .)
    LE              reduce using rule 72 (factor -> TEXTO .)
    GT              reduce using rule 72 (factor -> TEXTO .)
    LT              reduce using rule 72 (factor -> TEXTO .)
    EQ              reduce using rule 72 (factor -> TEXTO .)
    NE              reduce using rule 72 (factor -> TEXTO .)
    PLUS            reduce using rule 72 (factor -> TEXTO .)
    MINUS           reduce using rule 72 (factor -> TEXTO .)
    SEMICOLON       reduce using rule 72 (factor -> TEXTO .)
    RPAREN          reduce using rule 72 (factor -> TEXTO .)
    RBRACKET        reduce using rule 72 (factor -> TEXTO .)
    COMMA           reduce using rule 72 (factor -> TEXTO .)


state 31

    (13) fun_declaration -> type_specifier FUNCAO_PRINCIPAL LPAREN RPAREN . compound_stmt
    (19) compound_stmt -> . LBRACE local_declarations statement_list RBRACE

    LBRACE          shift and go to state 57

    compound_stmt                  shift and go to state 56

state 32

    (49) var -> ID LBRACKET . expression RBRACKET
    (40) expression -> . assignment
    (41) expression -> . simple_expression
    (42) assignment -> . var ASSIGN expression
    (43) assignment -> . var ADD_ASSIGN expression
    (44) assignment -> . var SUB_ASSIGN expression
    (45) assignment -> . var MUL_ASSIGN expression
    (46) assignment -> . var DIV_ASSIGN expression
    (47) assignment -> . var MOD_ASSIGN expression
    (50) simple_expression -> . additive_expression relop additive_expression
    (51) simple_expression -> . additive_expression
    (48) var -> . ID
    (49) var -> . ID LBRACKET expression RBRACKET
    (58) additive_expression -> . additive_expression addop term
    (59) additive_expression -> . term
    (62) term -> . term mulop factor
    (63) term -> . factor
    (67) factor -> . LPAREN expression RPAREN
    (68) factor -> . var
    (69) factor -> . call
    (70) factor -> . NUM_INT
    (71) factor -> . NUM_DEC
    (72) factor -> . TEXTO
    (73) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 18
    LPAREN          shift and go to state 26
    NUM_INT         shift and go to state 28
    NUM_DEC         shift and go to state 29
    TEXTO           shift and go to state 30

    expression                     shift and go to state 58
    assignment                     shift and go to state 20
    simple_expression              shift and go to state 21
    var                            shift and go to state 22
    additive_expression            shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 25
    call                           shift and go to state 27

state 33
